# deepeval

./: .gitignore  CLOUD_FEATURES.md  README.md  pyproject.toml
deepeval/: constants.py  evaluate.py
deepeval/dashboard/: app.py
deepeval/storage/: __init__.py
deepeval/test_case/: llm_test_case.py
deepeval/test_run/: test_run.py
examples/: library_usage.py
examples/dashboard/: README.md  run_server.bat  run_server.sh  server.py
examples/getting_started/: .env.example  README.md  basic_test.py  config.py
tests/: test_storage.py
